fix mobile padding on small screen below 600px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,7 +364,7 @@ footer {
   }
 
   .bg-image {
-    top: -50vh;
+    top: -45vh;
   }
 
   .computer-area {
